Fixed checkimg too close of the name input

--- a/static/style.css
+++ b/static/style.css
@@ -153,7 +153,7 @@ body {
     width: 25px;
     height: 25px;
     position: absolute;
-    left: 59.5%;
+    left: 62%;
     transform: translateX(-50%) translateY(-50%);
     user-select: none;
 }
